update image tag 20230828

--- a/team-test.yaml
+++ b/team-test.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   containers:
   - name: team-container
-    image: public.ecr.aws/c5s4y9b3/team:latest
+    image: 348286604051.dkr.ecr.ap-northeast-2.amazonaws.com/test-jm:min20230828
     ports:
     - containerPort: 80
 
